--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "concurrently": "^8.2.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "request": "^2.88.2"
   }
 }
